View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025691 | Open CASCADE | OCCT:Visualization | public | 2015-01-07 23:27 | 2015-05-14 15:33 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025691: Visualization, TKService - fix font corruption on FreeType 2.5.4 | ||||
Description | FreeType 2.5.4 release changes type of fields "rows" and "width" of public structure FT_Bitmap which causes artifacts in OCCT font renderer. | ||||
Steps To Reproduce | test bugs vis bug21091_2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug21091_2 | ||||
|
ft_ko.png (47,437 bytes) |
|
ft_ok.png (27,945 bytes) |
|
Branch CR25691 has been created by kgv. SHA-1: 5901c213679b6248896298967275c048a7549a29 Detailed log of new commits: Author: kgv Date: Wed Jan 7 23:29:06 2015 +0300 0025691: Visualization, TKService - fix font corruption on FreeType 2.5.4 |
|
Patch is ready for review. |
|
No remarks, please test. I suppose that with integration of this patch we shall add Freetype 2.5.5 to the list of supported versions in our docs, and add its binary archives to 3rd-party page on org site. (Note that Freetype 2.5.4 is not to be used - 2.5.5 is bug fix over it). |
|
Branch CR25691 has been updated forcibly by mkv. SHA-1: a01e61993d48e8ef01b54c521355b858599f3cfa |
|
Dear BugMaster, Branch CR25691 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR25691 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: a01e61993d48e8ef01b54c521355b858599f3cfa Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests.nnov.opencascade.com/CR25691-master-occt/Debian60-64/bugs/vis/bug21091_2.html http://occt-tests.nnov.opencascade.com/CR25691-master-occt/Windows-32-VC10/bugs/vis/bug21091_2.html bugs vis(004) bug21091_2: OK Testing on Linux: occt component : Total MEMORY difference: 369162180 / 369143040 Total CPU difference: 49230.560000000136 / 46134.27000000006 products component : Total MEMORY difference: 110855908 / 110510920 Total CPU difference: 16482.76999999999 / 15516.649999999994 Testing on Windows: occt component : Total MEMORY difference: 276496232 / 276918412 Total CPU difference: 32919.25 / 38326.15625 products component : Total MEMORY difference: 72512908 / 71429320 Total CPU difference: 10363.34375 / 10071.46875 There are no differences in images found by testdiff. |
|
Branch CR25691 has been deleted by inv. SHA-1: a01e61993d48e8ef01b54c521355b858599f3cfa |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-07 23:27 | kgv | New Issue | |
2015-01-07 23:27 | kgv | Assigned To | => kgv |
2015-01-07 23:27 | kgv | File Added: ft_ko.png | |
2015-01-07 23:27 | kgv | File Added: ft_ok.png | |
2015-01-07 23:29 | git | Note Added: 0035927 | |
2015-01-07 23:30 | kgv | Note Added: 0035928 | |
2015-01-07 23:30 | kgv | Assigned To | kgv => abv |
2015-01-07 23:30 | kgv | Status | new => resolved |
2015-01-08 10:49 |
|
Note Added: 0035931 | |
2015-01-08 10:49 |
|
Assigned To | abv => bugmaster |
2015-01-08 10:49 |
|
Status | resolved => reviewed |
2015-01-13 10:14 |
|
Assigned To | bugmaster => mkv |
2015-01-13 10:30 | git | Note Added: 0035990 | |
2015-01-14 15:48 |
|
Note Added: 0036051 | |
2015-01-14 15:49 |
|
Note Added: 0036052 | |
2015-01-14 15:49 |
|
Assigned To | mkv => bugmaster |
2015-01-14 15:49 |
|
Status | reviewed => tested |
2015-01-14 15:49 |
|
Test case number | => bugs vis(004) bug21091_2 |
2015-01-16 13:37 | bugmaster | Changeset attached | => occt master 49297cb6 |
2015-01-16 13:37 | bugmaster | Status | tested => verified |
2015-01-16 13:37 | bugmaster | Resolution | open => fixed |
2015-01-26 12:32 | git | Note Added: 0036530 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |