0025691: Visualization, TKService - fix font corruption on FreeType 2.5.4